# fotoboek

./: .dockerignore  .env  .env.sample  .gitignore  Cargo.toml  Dockerfile  README  README.md  alpine.Dockerfile  builder.Dockerfile  diesel.toml  docker-compose.yml.example  runtime.Dockerfile  start.sh
.github/workflows/: build_and_test.yml  cargo_cross_build.yml  docker_base_images.yml  docker_build  docker_build.yml  fotoboek_build.yml
app/: Cargo.toml
app/src/: config_parser.rs  main.rs  web.rs
app/src/api/: admin.rs  flashback.rs  gallery.rs  images.rs  mod.rs  timeline.rs  videos.rs
app/src/internal/: mod.rs  naive_date_time_rocket.rs
assets/: style.css
logic/: Cargo.toml
logic/src/: lib.rs  source_images.rs  source_videos.rs  worker.rs
logic/src/modules/: metadata.rs  mod.rs  preview.rs  transcode.rs  transcode.ts.rs
migrations/20210707112100_create_table_images/: up.sql
migrations/20210711205800_create_table_tasks/: up.sql
migrations/20210721172900_create_table_previews/: down.sql  up.sql
migrations/20210723113200_create_table_metadata/: up.sql
migrations/20210728191000_create_table_folders/: up.sql
migrations/20210728191000_create_table_image_paths/: down.sql  up.sql
migrations/20210804194700_add_work_started_at_to_tasks/: up.sql
migrations/20211231140500_init/: down.sql  up.sql
migrations/20220129132100_tasks_field_max_worker_id/: down.sql  up.sql
migrations/20220201194450_metadata_field_filename_date/: down.sql  up.sql
persistance/: Cargo.toml
persistance/src/: lib.rs  migrations.rs  schema.rs
persistance/src/fs/: mod.rs
persistance/src/models/: file.rs  file_metadata.rs  mod.rs  task.rs
persistance/src/queries/: admin.rs  flashback.rs  gallery.rs  mod.rs  timeline.rs
persistance/src/sqlite/: mod.rs
shared/: Cargo.toml
shared/src/: lib.rs  models.rs  path_utils.rs
src/: cl_args.rs  main.rs  source_images.rs
src/core/: image_description.rs  image_event_handler.rs  mod.rs  models.rs  resize.rs  utils.rs  worker.rs
src/core/modules/: folder.rs  image_path.rs  image_previews.rs  metadata.rs  mod.rs  preview.rs
src/data_store/: mod.rs  schema_migration.rs
src/db/: mod.rs  models.rs  schema.rs
src/db/models/: folder.rs  image.rs  image_path.rs  metadata.rs  mod.rs  preview.rs  task.rs
src/web/: binary_response.rs  mod.rs  routes.rs
src/web/routes/: api.rs  flashback.rs  gallery.rs  images.rs  mod.rs  ui.rs
templates/: base.html.tera  flashback.html.tera  gallery.html.tera  image.html.tera  index.html.tera
templates/gallery/: edit.html.tera  image.html.tera  view.html.tera
templates/macros/: image_macros.html.tera
templates/partials/: image-metadata.html.tera  init-photoswipe.html.tera  settings-bar.html.tera
webapp/: README.md  angular.json  package-lock.json  package.json
webapp/src/: index.html  manifest.webmanifest  materialize_variables.scss  proxy.conf.json  styles.scss
webapp/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.module.ts  keys.pipe.ts
webapp/src/app/admin/: admin.component.html  admin.component.scss  admin.component.ts
webapp/src/app/flashback/: flashback-date-formatter.pipe.ts  flashback-media-presentation.ts  flashback.component.html  flashback.component.ts
webapp/src/app/gallery/: gallery-media-presentation.ts  gallery.component.html  gallery.component.scss  gallery.component.ts
webapp/src/app/geo/: geo.component.html  geo.component.ts
webapp/src/app/media-presenter/: media-presenter.component.html  media-presenter.component.scss  media-presenter.component.ts  media-presenter.service.ts
(+13 files in other folders)
