[package]
name = "fotoboek"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/Pfarrer/fotoboek"

[dependencies]
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.8.4"
strum = "0.21"
strum_macros = "0.21"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "3.0.0-beta.2"
glob = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "^1.4.0", features = ["sqlite", "chrono"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
opencv = "0.53"
rexif = "0.7.3"
latlon = "0.1.3"
itertools = "0.10.1"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_sqlite_pool"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]

[dev-dependencies]
tempdir = "0.3"
diesel_migrations = "^1.4.0"