    [package]
name = "app"
version = "0.1.0"
edition = "2018"

[dependencies]
shared = { path = "../shared" }
persistance = { path = "../persistance" }
logic = { path = "../logic" }

dotenv = "0.15.0"
env_logger = "0.8.4"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_sqlite_pool"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
