[package]
name = "persistance"
version = "0.1.0"
edition = "2018"

[dependencies]
shared = { path = "../shared" }

diesel = { version = "^1.4.0", features = ["sqlite", "chrono"] }
diesel_migrations = "^1.4.0"
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_sqlite_pool"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4"

[dev-dependencies]
maplit = "1.0.2"
